...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Account Button -->
    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:background="#00FFFFFF"
        android:elevation="20dp"
...
            android:padding="20dp"
            android:src="@drawable/ic_home_icon"
            android:textColor="#000000" />

        <!-- User CRUD Button -->
        <ImageButton
            android:id="@+id/userCrudButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/hirehub_purple"
            android:contentDescription="User CRUD Button"
            android:elevation="20dp"
...
