...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Userboard.UserboardActivity">

    <!-- Search EditText with a bit more top margin -->
    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#FFFEFE"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawablePadding="10dp"
...
        android:text="There are no users available or found in the database. Please restart the application."
        android:textSize="20sp"
        android:visibility="gone" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/UserBoardRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
...
