<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    tools:context=".DeleteUserSheetFragment">


    <TextView
        android:id="@+id/deleteUserTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Delete user?"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/confirmDeleteUserText"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:padding="5dp"
        android:text="Are you sure you want to delete the user?"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmDeleteUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:text="Yes! Delete user!"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/design_default_color_error" />

</LinearLayout>